# RentalCalculator

./: .gitignore  Cargo.toml  Dioxus.toml  POSTGRESQL_SETUP.md  README.md  package-lock.json  test_postgres.rs
api/: Cargo.toml
api/src/: auth.rs  auth_functions.rs  db_connection.rs  lib.rs  property_models.rs
assets/: tailwind.css
desktop/: Cargo.toml
desktop/src/: common.rs  main.rs
desktop/src/views/: footer.rs  home.rs  layout.rs  learn_auth_main.rs  mod.rs  navbar.rs  not_found.rs  propety_income.rs  testing_server.rs
desktop/src/views/analysis/: calculator.rs  cash_flow.rs  comparison.rs  expenses.rs
desktop/src/views/dashboard/: add_property.rs  individual.rs  main_page.rs  mod.rs
desktop/src/views/dashboard/by_id/: conditions.rs  documents.rs  financial.rs  individual.rs  mod.rs  property_overview.rs
desktop/src/views/learn/: glossary_terms.rs  guides.rs  mod.rs
migrations/: 001_initial_setup.sql  002_properties.sql
src/: main.rs
src/views/: layout.rs  mod.rs  navbar.rs  property_details.rs  propety_income.rs
src/views/analysis/: calculator.rs  expenses.rs  mod.rs
src/views/dashboard/: add_property.rs  main_page.rs  mod.rs
tools/: Cargo.toml
