[workspace]
resolver = "2"
members = [
    "desktop",
    "api",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
chrono = "0.4.41"

# workspace
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
lto = true
opt-level = 3