[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus.workspace = true
api = { path = "../api" }  # Use actual features needed
serde.workspace = true

# Add any desktop-specific dependencies here
dioxus-desktop = { version = "0.6.3" }  # Add if needed

[features]
default = ["desktop"]  # Default to desktop features
desktop = [
    "dioxus/desktop",
    # Add any desktop-specific feature dependencies
]
